# seminars

./: .gitignore  MyVector.cpp  MyVector.h  SmartPtr.h  anthem.oga  main.cpp  task2.cpp  test.cpp
CS/: teacher.txt
MISP/2023.02.15/: task1.cpp  task2.cpp
MISP/2023.02.22/: Makefile  RGBA.cpp  main.cpp
MISP/2023.03.01/: Makefile  RGBA.cpp  main.cpp
MISP/2023.03.15/: absMain.cpp  coolTask.cpp  coolTask_formatted.cpp  task1.cpp  taskAbstract.cpp  taskAbstract.h  test_formatted.cpp
MISP/2023.03.22/: test.cpp
MISP/2023.03.29/: data.txt  task1.cpp
MISP/2023.05.03/: main.cpp
MISP/2023.05.31 smartptr-and-templates/: CMakeLists.txt  Matrix.cpp  Matrix.h  pair.cpp
MISP/2023.05.31-smartptr-and-templates/: SmartPtr.cpp  SmartPtr.h  main.cpp  pair.h
MISP/2023.09.11 ForwardList and PIMPL/: CMakeLists.txt
MISP/2023.09.11 forward-list-and-pimpl/: CMakeLists.txt
MISP/2023.09.11 forward-list-and-pimpl/src/task1/: forward_list.h  main.cpp
MISP/2023.09.11 forward-list-and-pimpl/src/task2/: main.cpp  time_meter_win.cpp
MISP/2023.09.25 stl-algorithms/: CMakeLists.txt
MISP/2023.10.02 lambda/: CMakeLists.txt
MISP/2023.10.09 functional/: CMakeLists.txt
MISP/2023.10.09 functional/src/task7/: main.cpp  time_meter.h  time_meter_lin.cpp
MISP/2023.10.16 permutations/: CMakeLists.txt
MISP/2023.10.30 cpp17/: CMakeLists.txt
MISP/2023.11.06 cpp17/: CMakeLists.txt
MISP/2023.11.13 md5/: CMakeLists.txt
MISP/2023.11.27 threads/: CMakeLists.txt
PZRL/2022.11.14/: main.c
modules/: ArraySorts.cpp  ArraysMisc.cpp  CppMisc.cpp  Makefile  Timer.cpp  test.cpp
(+140 files in other folders)
